# brisk-mapreduce

./: .gitignore  Makefile  mapreduce.cabal  stack.yaml
src/: MapReduce.hs  Mapper.hs  Master.hs  Queue.hs  Utils.hs
