name:                mapreduce
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/mapreduce#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MapReduce
  other-modules:       Master
                     , Queue
                     , Mapper
                     , Utils
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , brisk
                     , brisk-prelude
                     , distributed-process
                     , binary
